--- a/dog.css
+++ b/dog.css
@@ -5,7 +5,7 @@
     --eye: #ddb54d;
     --eyeball: #030303;
     --eyelight: #fafafa;
-    --nose: #d3918e;
+    --nose: #1e1515;
     --heart: #dc4053;
 }
 
